force-app/main/default/objects/Rate__c/Rate__c.object-meta.xml
<CustomObject>
    <description>Created for sustainable formulas on the Work Log object for Cleanslate job costing. Rates include FICA, Worker&apos;s Comp (WC), and Unemployment (SUC).</description>
    <label>Rate</label>
    <nameField>
        <displayFormat>Rate-{0000}</displayFormat>
        <label>Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>