force-app/main/default/objects/Rate__c/fields/Active_Rate_Set__c.field-meta.xml
<CustomField>
    <fullName>Active_Rate_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Rate Set</label>
    <type>Checkbox</type>
</CustomField>