force-app/main/default/objects/Rate__c/fields/Catholic_Charities_WC__c.field-meta.xml
<CustomField>
    <fullName>Catholic_Charities_WC__c</fullName>
    <label>Catholic Charities WC</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>