force-app/main/default/objects/Rate__c/fields/FICA__c.field-meta.xml
<CustomField>
    <fullName>FICA__c</fullName>
    <inlineHelpText>FICA is the same rate for staff and interns</inlineHelpText>
    <label>FICA</label>
    <precision>10</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>