force-app/main/default/objects/Rate__c/fields/General_Admin_WC__c.field-meta.xml
<CustomField>
    <fullName>General_Admin_WC__c</fullName>
    <label>General Admin WC</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>