force-app/main/default/objects/Rate__c/fields/Habitat_Janitorial_WC__c.field-meta.xml
<CustomField>
    <fullName>Habitat_Janitorial_WC__c</fullName>
    <label>Habitat Janitorial WC</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>