force-app/main/default/objects/Rate__c/fields/Intern_Unemployment__c.field-meta.xml
<CustomField>
    <fullName>Intern_Unemployment__c</fullName>
    <label>Worker Unemployment</label>
    <precision>10</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>