force-app/main/default/objects/Rate__c/fields/Intern_Worker_s_Comp_Janitorial__c.field-meta.xml
<CustomField>
    <fullName>Intern_Worker_s_Comp_Janitorial__c</fullName>
    <label>Worker Worker&apos;s Comp, Janitorial</label>
    <precision>10</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>