force-app/main/default/objects/Rate__c/fields/Mileage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Cost__c</fullName>
    <label>Mileage Cost</label>
    <precision>10</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>