force-app/main/default/objects/Rate__c/fields/Rate_Set_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Set_Start_Date__c</fullName>
    <label>Rate Set Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>