force-app/main/default/objects/Rate__c/fields/Recycling_Bag_Cost__c.field-meta.xml
<CustomField>
    <fullName>Recycling_Bag_Cost__c</fullName>
    <label>Recycling Bag Cost</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>