force-app/main/default/objects/Rate__c/fields/Salt_Cost__c.field-meta.xml
<CustomField>
    <fullName>Salt_Cost__c</fullName>
    <label>Salt Cost</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>