force-app/main/default/objects/Rate__c/fields/Staff_Worker_s_Comp__c.field-meta.xml
<CustomField>
    <fullName>Staff_Worker_s_Comp__c</fullName>
    <label>Staff Worker&apos;s Comp</label>
    <precision>10</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>