force-app/main/default/objects/Rate__c/fields/Warehouse_WC__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_WC__c</fullName>
    <label>Warehouse WC</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>